PR bin/53712

Avoid crash from redirect on null compound command.